# LSTATISTICS

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  read-config-from-file.py  requirements.txt  tox.ini
config/: plot_config.json
docs/: Change-Logs.md  Python-lib.md  发包.md
notebooks/: index.md
notebooks/01-descriptive-statistics/: TOC.md  histogram.ipynb
notebooks/Terminologies/: A.md
scripts/: README.md  build-pkg.bat  clean.bat  install-pkg.bat  uninstall-pkg.bat
src/: main.py  test-package-import.py
src/LSTATISTICS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nostats/: __init__.py
src/nostats.egg-info/: PKG-INFO  SOURCES.txt
src/nostats/utils/: __init__.py  convertor.py  device_parms.py  rich_style.py
src/nostats/viz/: README.md  __init__.py  init_style.py
src/nostats/viz/config/: plot_config.yaml
src/utils/: __init__.py  device_parms.py
src/utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/config/: rich_style_config.yaml
test/: test-rich.ipynb
tests/: import-config.ipynb  test-github-markdown-style.md  test-path.py  test-rich.ipynb  test.py
utils/: __init__.py  convertor.py  device-parms.py  rich_style.py  test-path.py
