[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "NoVarYe", email = "jidijam.olk@outlook.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    matplotlib==3.10.3
    numpy==2.2.6
    pandas==2.3.0
    plotly==6.2.0
    rich==14.0.0
    seaborn==0.13.2
    nvidia-ml-py==12.0.0
    psutil==7.0.0
]
description = "A package to learn Statistics"
keywords = ["Statistics"]
license = {file = "LICENSE.md"}
name = "LSTATISTICS"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
homepage = "https://www.nowisdoms.xyz/"
repository = "https://github.com/No4Var2Ye/LSTATISTICS"
