[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "NoVarYe", email = "jidijam.olk@outlook.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []
description = "A package to learn Statistics"
keywords = ["Statistics"]
license = {file = "LICENSE.md"}
name = "nostats"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.1"

[project.urls]
homepage = "https://www.nowisdoms.xyz/"
repository = "https://github.com/No4Var2Ye/LSTATISTICS"

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
include = ["nostats"]  # ["*"] by default
exclude = []  # empty by default
namespaces = false  # true by default

[tool.setuptools]
include-package-data = true
# This is already the default behaviour if you are using
# pyproject.toml to configure your build.
# You can deactivate that with `include-package-data = false`